@@ -7,6 +7,7 @@ SubVersion: $Id$
 	- [roms]  $1627: put all gscales extern into gscales.h
 	- [roms]  $1629: added new I/O ports window which let view/modify HW registers
 	- [roms]  $1648: fixed buffer overflow in RTC HW3 and disabled full screen mode (too slow)
+	- [roms]  $1651: avoid link port acces in I/O window and don't allow writing on RO registers
 
 - 16/07/2005, version 2.00-rc7:
 	- [roms] $1583: fixed PPhD's bug (no reload of ROM calls when upgrading)
